# PinkverseStoryBot

./: .gitignore  bots.py  channel_context.py  config.py  cooper_dog.py  dm_context.py  extract_json.py  extract_yaml.py  group_context.py  magi_bot.py  main.py  newmain.py  pyproject.toml  test.json  test.py  testopenai.py  threads.py  utils.py
data/context/: dev-test.json  zh-en-翻译.json  重要判断器.json
